force-app/main/default/objects/AccountContactRelation/fields/IM_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>IM_Contact_No__c</fullName>
    <formula>IF(ISBLANK(IM_Contact_Number_Text__c), 
IF(
  ISPICKVAL(SourceOrg__c ,&apos;GE&apos;),
  Source_Contact_ID__c,
  IF(
    ISPICKVAL(Contact.Legacy_CRM_Instance__c ,&apos;GE&apos;),
     Contact.Contact_Number__c,
     Contact.IM_Contact_No__c
  )
),
IM_Contact_Number_Text__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IM Contact No</label>
    <type>Text</type>
</CustomField>