force-app/main/default/objects/AccountContactRelation/fields/IM_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>IM_Contact_Number__c</fullName>
    <displayFormat>IMC-{00000}</displayFormat>
    <label>IM Contact Number</label>
    <type>AutoNumber</type>
</CustomField>