force-app/main/default/objects/AccountContactRelation/fields/IM_Contact_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>IM_Contact_Number_Text__c</fullName>
    <label>IM Contact Number Text</label>
    <length>130</length>
    <type>Text</type>
</CustomField>