force-app/main/default/objects/AccountContactRelation/fields/Source_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact_ID__c</fullName>
    <label>Source Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>