force-app/main/default/objects/AccountContactRelation/fields/SourceOrg__c.field-meta.xml
<CustomField>
    <fullName>SourceOrg__c</fullName>
    <label>Source Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legacy_CRM_Instance</valueSetName>
    </valueSet>
</CustomField>